OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.3

New features:
- 3417863: Upgrade Tomcat to version 6.0.33

OpenSearchServer 1.2.3

New features:
- 3396935: Log files viewable in the user interface
- 3393751: XML load sheduler task
- 3393063: Upgrade to SeleniumHQ 2.0.4
- 3393052: Upgrade to NekoHTML 1.9.15
- 3393047: Upgrade to TagSoup 1.2.1
- 3393046: Upgrade to PDFBox 1.6.x
- 3393032: Frameset support
- 3392359: Drupal module for OpenSearchServer
- 3380911: Scheduler informations in home view	
- 3370376: Parser have editable parameters
- 3366055: URLBrowser API
- 3353874: OSS could be a great sitemap generator
- 3356222: Export the search result into csv file
- 3344564: Adding Snippet Field Size and Tag from the API
- 3310490: File Crawler API
- 3310489: Web Crawler API
- 2958005: Upgrade Apache HttpClient library to 4.1.1

Bug fixes:
- 3325102: Bug Report	Disabled Robots doesn't work
- 3409814: Error: The document is really a RTF file
- 3408193: Password of the XMLLoad task is not encrypted
- 3406657: File crawler error: unknown protocol: smb
- 3406378: SQLite supports only TRANSACTION_SERIALIZABLE
- 3396778: Word 95 or older format are not indexed	
- 3386593: LimitException when reading Robots.txt	
- 3380949: NPE in Renderer
- 3376106: The mapping of inlink and outlink is broken	
- 3346206: NPE when Fragmenter is set through API.
- 3323250: Invalid XML when the query includes an ampersand
- 3316826: Optimize API don't return any feedback
- 3316820: Action API returns a blank page
- 3310825: WriteAbortedException in catalina.out when Tomcat restarts
- 3310716: Index deletion and re-creation issue
- 3305045: Malformed base tag causes crawling error

OpenSearchServer 1.2.2

New features:
- 3307328: Update notification
- 3300872: Scheduler task list extensible
- 3287318: Upgrade to seleniumhq 2.x	